--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
             text-transform: uppercase;
         }
         .cal-cell { 
-            border-right: 1px solid rgba(255,255,255,0.15); 
-            border-bottom: 1px solid rgba(255,255,255,0.15); 
-            min-height: 40px;
-            position: relative; 
-        }
+			border-right: 1px solid rgba(255,255,255,0.15); 
+			border-bottom: 1px solid rgba(255,255,255,0.15); 
+			min-height: 30px; /* Reducido de 40px para que las filas sean más bajas */
+			position: relative; 
+		}
         .cal-cell-closed {
             background: repeating-linear-gradient(45deg, rgba(255,255,255,0.02), rgba(255,255,255,0.02) 10px, rgba(255,255,255,0.05) 10px, rgba(255,255,255,0.05) 20px);
             opacity: 0.5;
@@ -130,20 +130,27 @@
         }
 
         .class-badge {
-            color: black; font-weight: 900;
-            padding: 2px; text-transform: uppercase; font-style: italic;
-            cursor: pointer;
-            display: flex; flex-direction: column; justify-content: center; align-items: center;
-            text-align: center; width: 100%;
-            border: 1px solid rgba(0,0,0,0.1);
-            box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
-            transition: transform 0.2s;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 10;
-            height: calc(200% + 1px);
-        }
+			color: black; 
+			font-weight: 900;
+			padding: 4px; /* Aumentado un poco el padding interno */
+			text-transform: uppercase; 
+			font-style: italic;
+			cursor: pointer;
+			display: flex; 
+			flex-direction: column; 
+			justify-content: center; 
+			align-items: center;
+			text-align: center; 
+			width: 100%;
+			border: 1px solid rgba(0,0,0,0.1);
+			box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
+			transition: transform 0.2s;
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: 10;
+			height: 100%; /* Ajustado al 100% de la celda */
+		}
         .class-badge:hover { transform: scale(0.97); z-index: 20; }
 
         .filter-btn {
@@ -1332,7 +1339,11 @@
                             badge.ondragstart = (e) => e.dataTransfer.setData("clase_id", c.id);
                         }
                     }
-                    badge.innerHTML = `<span class="text-[8px] mb-0.5 leading-none font-black uppercase">${c.nombre}</span><div class="bg-black/20 px-1 rounded-full text-[7px] font-black">${cupoActual}/${capMax}</div>`;
+                    badge.innerHTML = `
+						<span class="text-[11px] leading-none font-black uppercase mb-1">${c.nombre}</span>
+						<span class="text-[8px] opacity-80 font-bold mb-1">${c.coach || ''}</span>
+						<div class="bg-black/20 px-1.5 rounded-full text-[8px] font-black">${cupoActual}/${capMax}</div>
+					`;
                     cell.appendChild(badge);
                 }
             });
